--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,5 @@ include *.txt *.py
 recursive-include integration_tests *.py
 include pysovo/tests/resources/*.xml
 
+include versioneer.py
+include pysovo/_version.py
